grammars/help/test/corpus/files.txt
====
load
====
load
---
(command
  (load))


===========
load script
===========
load script
---
(command
  (load
    (script)))


======
export
======
export
---
(command
  (export))


=============
export module
=============
export module
---
(command
  (export
    (module)))


=================
export module svg
=================
export module svg
---
(command
  (export
    (module
      (svg))))


=======================
export module svg light
=======================
export module svg light
---
(command
  (export
    (module
      (svg
        (light)))))


=======================
export module svg dark
=======================
export module svg dark
---
(command
  (export
    (module
      (svg
        (dark)))))
