grammars/help/test/corpus/help.txt
===
new
===
new
---
(command
  (new))


===
set
===
set
---
(command
  (set))


======
delete
======
delete
---
(command
  (delete))


======
export
======
export
---
(command
  (export))


====
list
====
list
---
(command
  (list))

